# aws_connector

./: .gitignore  .prettierignore  CLAUDE.md  ROADMAP.md  SETUP.md  eslint.config.js  package.json  pnpm-lock.yaml
.claude/: settings.local.json
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/aws/: cloudwatch.rs  credentials.rs  ec2.rs  ecs.rs  mod.rs  s3.rs
src-tauri/src/commands/: aws_commands.rs  logs_commands.rs  mod.rs  resource_commands.rs  s3_commands.rs  terminal_commands.rs
src-tauri/src/logs/: session.rs
src-tauri/src/terminal/: error.rs  mod.rs  pty.rs  session.rs
src/lib/api/: aws.ts  logs.ts  resources.ts  s3.ts  terminal.ts
src/lib/components/aws/: AddProfileModal.svelte  PortForwardingModal.svelte  ResourceTree.svelte
src/lib/components/layout/: Header.svelte  MainContent.svelte  SettingsModal.svelte  Sidebar.svelte  StatusBar.svelte  ToastContainer.svelte  index.ts
src/lib/components/logs/: LogTailPane.svelte  LogTailTabs.svelte  LogViewer.svelte  index.ts
src/lib/components/s3/: S3Browser.svelte  S3FilePreview.svelte  index.ts
src/lib/components/terminal/: TerminalContainer.svelte  TerminalPane.svelte  TerminalTabs.svelte  index.ts
src/lib/stores/: logs.ts  notifications.ts  profiles.ts  resources.ts  s3.ts  settings.ts  terminals.ts
src/lib/types/: aws.ts  logs.ts  s3.ts  terminal.ts
src/routes/: +layout.svelte  +page.svelte
