[package]
name = "aws_connector"
version = "0.1.0"
description = "AWS Connector - Connect to ECS containers and EC2 instances via SSM"
authors = ["Abdul Rehman"]
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/aws-connector"

[lib]
name = "aws_connector_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# AWS SDK
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-ecs = "1.50"
aws-sdk-ec2 = "1.80"
aws-sdk-ssm = "1.50"
aws-sdk-sts = "1.50"
aws-sdk-cloudwatchlogs = "1.50"
aws-sdk-s3 = "1.50"

# PTY for terminal
portable-pty = "0.8"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1.19"
parking_lot = "0.12"

# Config file parsing
toml = "0.8"
ini = "1.3"

